Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.12.0
-
Fix Version/s: 5.12.1, 5.12.2, 5.13.1, 5.14.0 Alpha
-
Component/s: WebSockets
-
Labels:None
-
Platform/s:
-
Commits:16bfc98a03186cef5aafa79709b086faa0d4f9f2 (qt/qtwebsockets/5.12)
Description
Wasm implementation of qwebsocket does not set socket state, which results in the socket can't be closed.
Hack in attached patch works, but requires setSocketState to be public, as the patch shows.