wasm: set and update socket state

Fixes: QTBUG-72664
Change-Id: I8bd90f8676835d8f7bec135ad3e6c6b3e9cd9d9a
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>